# splitsio

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
splitsio/: __init__.py  api.py  plot.py  query.py
