[tool.poetry]
name = "splitsio"
version = "0.1.0"
description = "A Python implementation of the splits.io REST API."
authors = ["Jeremy Silver <jeremyag@comcast.net>"]
license = "MIT"
readme = "README.md"
keywords = ['splitsio', 'speedrun']

[tool.poetry.dependencies]
python = "^3.7"
dataclasses_json = "^0.4.2"
marshmallow = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
